# stcaf

./: .gitignore  CONTRIBUTING.md  README.md  justfile  pyproject.toml
.github/workflows/: python-publish.yml  pythonpackage.yml
src/stcaf/: __init__.py  core.py
src/stcaf/sealevel_component_models/: testing_models.py
tests/: test_climate.py  test_registry.py  test_sealevelcomponent.py  test_transitions.py
