[project]
name = "stcaf"
description = "Prototype framework for sea-level change modeling"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "xarray>=2025.1.2",
]

[project.entry-points."stcaf.sealevel_component_models"]
"testing_models.bump" = "stcaf.sealevel_component_models.testing_models:BumpModel"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.10.0",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "999"

[tool.hatch.build.hooks.vcs]
version-file = "src/stcaf/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]
