[project]
name = "stcaf"
description = "Prototype framework for sea-level change modeling"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "xarray>=2025.1.2",
]

[project.urls]
Homepage = "https://github.com/brews/stcaf"
Documentation = "https://github.com/brews/stcaf"
Source = "https://github.com/brews/stcaf"
"Bug Tracker" = "https://github.com/brews/stcaf/issues"

[project.entry-points."stcaf.sealevel_component_models"]
"testing_models.bump" = "stcaf.sealevel_component_models.testing_models:BumpModel"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.10.0",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "999"

[tool.hatch.build.hooks.vcs]
version-file = "src/stcaf/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]
